--- a/untitled.html
+++ b/untitled.html
@@ -14,11 +14,24 @@
 	
 	add this
 	
+	처음에 
+	
+	git init
+	
 	
 	코드를 수정한다
 	터미널에서
 	git add .
 	git commit -m "수정사항내용"
+	
+	로컬 깃허브 연결
+	//git remote add origin https://github.com/bitnaGithub/firstproject.git
+	명령어가 약간 다른 것 같음
+	처음에 프로젝트 만들면 나옴
+	연결 확인
+	git remote -v
+	
+	올리기
 	git push -u origin main
 
 	
